fixed inbox ui overflow bug

--- a/frontend/ui/src/pages/Inbox/Messenger/MessengerContainer/index.module.scss
+++ b/frontend/ui/src/pages/Inbox/Messenger/MessengerContainer/index.module.scss
@@ -8,6 +8,7 @@
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   position: relative;
+  overflow-x: hidden;
 }
 
 .emptyState {
